añadiendo avance html

--- a/index.html
+++ b/index.html
@@ -41,19 +41,32 @@
   <section id="main">
     <h3>Nataly Otero Celis</h3>
   </section>
+  <section id="about-me">
+    <h5>Acerca de mi</h5>
+  </section>
+  <section id="portafolio">
+    <h5>Proyectos Github</h5>
+  </section>
   <footer>
     <div class="container">
-    <div class="row">
-      <div class="col-sm">
-        <h2>Contactame</h2>
-        <p>987401013</p>
-        <p>noteroc@hotmail.com</p>
-
+      <div class="row">
+        <div class="col-sm-12 col-md-6 text-align">
+          <h4>Contactame</h2>
+          <p>987401013</p>
+          <p>noteroc@hotmail.com</p>
+        </div>
+        <div class="col-sm-12 col-md-6 text-align">
+          <h4>Github</h2>
+          <p>Linkeid</p>
+          <p>noteroc@hotmail.com</p>  
+        </div>
       </div>
-      
-    </div>
-
-    </div>
+      <div class="row">
+        <div class="col-md-12">
+          <p><center><a href="#">Contact Stuff Here</a> <p class="footertext">Copyright 2018</p></center></p>
+        </div>
+      </div>
+    
   </footer>
   
   <!-- <img src="assets/images/enconstrucion.jpg" alt=""> -->
