--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="col-sm-12 col-md-6 col-lg-6">
           <p>Soy una mujer autodidacta,comprometida y dedicada, siempre estoy desarrollando mis habilidades, aprendiendo algo
             nuevo todos los días.</p>
-          <button type="button" class="btn btn-secondary">Descargar CV</button>
+          <a href="assets/docs/CV-NatalyOteroCelis.pdf"class="btn btn-secondary">Descargar CV</a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 text-center">
           <h5>Reconocimiento Laboratoria</h5>
