--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Portafolio-Nataly Otero Celis</title>
+  <title>Nataly Otero Celis</title>
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
     crossorigin="anonymous">
   <!-- Compiled and minified CSS -->
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -63,7 +65,7 @@
         <div class="col-sm-12 col-md-6 col-lg-6">
           <p>Soy una mujer autodidacta,comprometida y dedicada, siempre estoy desarrollando mis habilidades, aprendiendo algo
             nuevo todos los días.</p>
-          <a href="assets/docs/CV-NatalyOteroCelis.pdf"class="btn btn-secondary">Descargar CV</a>
+          <a href="assets/docs/CV-NatalyOteroCelis.pdf" class="btn btn-secondary">Descargar CV</a>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-6 text-center">
           <h5>Reconocimiento Laboratoria</h5>
@@ -84,32 +86,32 @@
           </div>
           <div class="blog-grids row text-center">
             <div class="col-sm-12 ol-md-6 col-lg-6">
-                <div class="progress">
-                    <div class="progress-bar bg-success" role="progressbar" style="width: 75%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p>JAVASCRIPT</p>
-                  <div class="progress">
-                    <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p>JQUERY</p>
-                  <div class="progress">
-                      <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>FIREBASE</p>
+              <div class="progress">
+                <div class="progress-bar bg-success" role="progressbar" style="width: 75%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p>JAVASCRIPT</p>
+              <div class="progress">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p>JQUERY</p>
+              <div class="progress">
+                <div class="progress-bar bg-danger" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p>FIREBASE</p>
             </div>
             <div class="col-sm-12 ol-md-6 col-lg-6">
-                <div class="progress">
-                    <div class="progress-bar bg-info" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p>CSS</p>
-                  <div class="progress">
-                    <div class="progress-bar bg-warning" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                  <p>HTML</p>
-                  <div class="progress">
-                      <div class="progress-bar bg-warning" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    <p>BOOSTRAP</p>
+              <div class="progress">
+                <div class="progress-bar bg-info" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p>CSS</p>
+              <div class="progress">
+                <div class="progress-bar bg-warning" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p>HTML</p>
+              <div class="progress">
+                <div class="progress-bar bg-warning" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+              <p>BOOSTRAP</p>
             </div>
           </div>
         </div>
@@ -133,10 +135,10 @@
           <div class="col-sm-12 col-md-4 col-lg-4 blog-text-info">
             <div class="card card-custom bg-white border-white">
               <div class="card-custom-img" style="background-image: url(./assets/images/proyect-cardify.png)"></div>
-              <div class="card-custom-avatar">
+              <!-- <div class="card-custom-avatar">
                 <img class="img-fluid" src="http://res.cloudinary.com/d3/image/upload/c_pad,g_center,h_200,q_auto:eco,w_200/bootstrap-logo_u3c8dx.jpg"
                   alt="Avatar" />
-              </div>
+              </div> -->
               <div class="card-body" style="overflow-y: auto">
                 <h4 class="card-title">Cardify</h4>
                 <p class="card-text">Es un plugin que permita mostrar el atributo alt de la imagen al hacer el efecto hover.Trabajo Colaborativo.</p>
@@ -153,10 +155,10 @@
           <div class="col-sm-12 col-md-4 col-lg-4 blog-text-info">
             <div class="card card-custom bg-white border-white">
               <div class="card-custom-img" style="background-image: url(./assets/images/proyect-easy.png)"></div>
-              <div class="card-custom-avatar">
+              <!-- <div class="card-custom-avatar">
                 <img class="img-fluid" src="http://res.cloudinary.com/d3/image/upload/c_pad,g_center,h_200,q_auto:eco,w_200/bootstrap-logo_u3c8dx.jpg"
                   alt="Avatar" />
-              </div>
+              </div> -->
               <div class="card-body" style="overflow-y: auto">
                 <h4 class="card-title">Easy-vreco</h4>
                 <p class="card-text">Es una página web que le permite al usuario ubicarse y descubrir lugares. Decide a dónde ir con ayuda de
@@ -174,10 +176,10 @@
           <div class="col-sm-12 col-md-4 col-lg-4 blog-text-info">
             <div class="card card-custom bg-white border-white">
               <div class="card-custom-img" style="background-image: url(./assets/images/proyect-trello.png)"></div>
-              <div class="card-custom-avatar">
+              <!-- <div class="card-custom-avatar">
                 <img class="img-fluid" src="http://res.cloudinary.com/d3/image/upload/c_pad,g_center,h_200,q_auto:eco,w_200/bootstrap-logo_u3c8dx.jpg"
                   alt="Avatar" />
-              </div>
+              </div> -->
               <div class="card-body" style="overflow-y: auto">
                 <h4 class="card-title">Trello</h4>
                 <p class="card-text">Es una página web que replica el tablero original.</p>
@@ -198,30 +200,50 @@
     </div>
   </section>
   <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6 offset-md-3 col-lg-6 offset-lg-4 text-center">
-            <div class="blog-info text-center">
-              <h3>CONTACTO</h3>
-              <div class="strip text-center">
-                <img src="assets/images/about.png" alt=" ">
-              </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-6 offset-md-3 col-lg-6 offset-lg-4 text-center">
+          <div class="blog-info text-center">
+            <h3>CONTACTO</h3>
+            <div class="strip text-center">
+              <img src="assets/images/about.png" alt=" ">
             </div>
           </div>
         </div>
-        <div class="row marg-top">
-          <div class="col-sm-12 col-md-6 offset-md-3 col-lg-6 offset-lg-4 text-center">
-            <ul>
-              <li><a href="https://www.linkedin.com/in/natalydelcarmenoterocelis" target="_blank"><i class="fab fa-2x fa-linkedin a-contact"></i></a><span>Nataly del Carmen Otero Celis</span>
-              </li>
-              <li><a href="mailto:noteroc@hotmail.com" target="_blank"><i class="fas fa-2x fa-envelope a-contact a-contact"></i></a><span>noteroc@hotmail.com</span></li>
-              <li><a href="https://github.com/NatalyOC" target="_blank"><i class="fa-2x fab fa-github-square a-contact"></i></a><span>NatalyOC</span></li>
-              <li><a href="#" target="_blank"><i class="fas fa-2x fa-mobile-alt a-contact"></i></a><span>(+51)987401013</span></li>
-            </ul>
-          </div>
+      </div>
+      <div class="row marg-top">
+        <!-- <div class="col-sm-12 col-md-6 offset-md-3 col-lg-6 offset-lg-4 text-center"> -->
+            <div class="col-sm-12 col-md-12 col-lg-12 text-center">
+          <ul>
+            <li>
+              <a href="https://www.linkedin.com/in/natalydelcarmenoterocelis" target="_blank">
+                <i class="fab fa-2x fa-linkedin a-contact"></i>
+              </a>
+              <span>Nataly del Carmen Otero Celis</span>
+            </li>
+            <li>
+              <a href="mailto:noteroc@hotmail.com" target="_blank">
+                <i class="fas fa-2x fa-envelope a-contact a-contact"></i>
+              </a>
+              <span>noteroc@hotmail.com</span>
+            </li>
+            <li>
+              <a href="https://github.com/NatalyOC" target="_blank">
+                <i class="fa-2x fab fa-github-square a-contact"></i>
+              </a>
+              <span>NatalyOC</span>
+            </li>
+            <li>
+              <a href="#" target="_blank">
+                <i class="fas fa-2x fa-mobile-alt a-contact"></i>
+              </a>
+              <span>(+51)987401013</span>
+            </li>
+          </ul>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
   <footer>
     <div class="container">
       <div class="row">
