--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section id="skills">
     <div class="container">
       <div class="row">
-        <div class="col-sm-12 col-md-6 offset-md-3 col-lg-6 offset-lg-4 text-center">
+        <div class="col-sm-12 col-md-6 offset-md-3 col-lg-6 offset-lg-4 text-center p-50">
           <div class="blog-info text-center">
             <h3>SKILL'S</h3>
             <div class="strip text-center">
@@ -212,26 +212,26 @@
       <div class="row marg-top">
         <!-- <div class="col-sm-12 col-md-6 offset-md-3 col-lg-6 offset-lg-4 text-center"> -->
             <div class="col-sm-12 col-md-12 col-lg-12 text-center">
-          <ul>
-            <li>
+          <ul class="nav row">
+            <li class="nav-item col-sm-12 col-md-3 col-lg-3">
               <a href="https://www.linkedin.com/in/natalydelcarmenoterocelis" target="_blank">
                 <i class="fab fa-2x fa-linkedin a-contact"></i>
               </a>
               <span>Nataly del Carmen Otero Celis</span>
             </li>
-            <li>
+            <li class="nav-item col-sm-12 col-md-3 col-lg-3">
               <a href="mailto:noteroc@hotmail.com" target="_blank">
                 <i class="fas fa-2x fa-envelope a-contact a-contact"></i>
               </a>
               <span>noteroc@hotmail.com</span>
             </li>
-            <li>
+            <li class="nav-item col-sm-12 col-md-3 col-lg-3">
               <a href="https://github.com/NatalyOC" target="_blank">
                 <i class="fa-2x fab fa-github-square a-contact"></i>
               </a>
               <span>NatalyOC</span>
             </li>
-            <li>
+            <li class="nav-item col-sm-12 col-md-3 col-lg-3">
               <a href="#" target="_blank">
                 <i class="fas fa-2x fa-mobile-alt a-contact"></i>
               </a>
