--- a/index.html
+++ b/index.html
@@ -173,22 +173,21 @@
           </div>
           <div class="col-sm-12 col-md-4 col-lg-4 blog-text-info">
             <div class="card card-custom bg-white border-white">
-              <div class="card-custom-img" style="background-image: url(./assets/images/proyect-trello.png)"></div>
+              <div class="card-custom-img" style="background-image: url(./assets/images/fareestimate.png)"></div>
               <!-- <div class="card-custom-avatar">
                 <img class="img-fluid" src="http://res.cloudinary.com/d3/image/upload/c_pad,g_center,h_200,q_auto:eco,w_200/bootstrap-logo_u3c8dx.jpg"
                   alt="Avatar" />
               </div> -->
               <div class="card-body" style="overflow-y: auto">
-                <h4 class="card-title">Trello</h4>
-                <p class="card-text">Es una página web que replica el tablero original.</p>
-                <br>
+                <h4 class="card-title">Fare Estimate</h4>
+                <p class="card-text">Es una página web que calcula una tarifa para tu próximo viaje. Simplemente ingresa un punto de partida y un destino.</p>
                 <span class="badge cgrain">HTML</span>
                 <span class="badge cgrain">JAVASCRIPT</span>
                 <span class="badge cgrain">CSS</span>
               </div>
               <div class="card-footer" style="background: inherit; border-color: inherit;">
-                <a href="https://github.com/NatalyOC/trello" class="btn color-brain" target="blank">Código</a>
-                <a href="https://natalyoc.github.io/trello/" class="btn color-grain" target="blank">Demo</a>
+                <a href="https://github.com/NatalyOC/fare-estimate" class="btn color-brain" target="blank">Código</a>
+                <a href="https://natalyoc.github.io/fare-estimate/public/" class="btn color-grain" target="blank">Demo</a>
               </div>
             </div>
           </div>
