--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about-me">Acerca de Mi</a>
+            <a class="nav-link" href="#about-me">Acerca de Mí</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#portfolio">Portafolio</a>
@@ -132,7 +132,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 blog-text-info">
             <div class="card card-custom bg-white border-white">
-              <div class="card-custom-img" style="background-image: url(./assets/images/proyect-cardify.png)"></div>
+              <div class="card-custom-img" style="background-image: url(./assets/images/proyect-cardify_opt.png)"></div>
               <!-- <div class="card-custom-avatar">
                 <img class="img-fluid" src="http://res.cloudinary.com/d3/image/upload/c_pad,g_center,h_200,q_auto:eco,w_200/bootstrap-logo_u3c8dx.jpg"
                   alt="Avatar" />
@@ -173,7 +173,7 @@
           </div>
           <div class="col-sm-12 col-md-4 col-lg-4 blog-text-info">
             <div class="card card-custom bg-white border-white">
-              <div class="card-custom-img" style="background-image: url(./assets/images/fareestimate.png)"></div>
+              <div class="card-custom-img" style="background-image: url(./assets/images/fareestimate_opt.png)"></div>
               <!-- <div class="card-custom-avatar">
                 <img class="img-fluid" src="http://res.cloudinary.com/d3/image/upload/c_pad,g_center,h_200,q_auto:eco,w_200/bootstrap-logo_u3c8dx.jpg"
                   alt="Avatar" />
